<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="wt_page1_title">Topics</string>
    <string name="wt_page1_description">List of the most common Android Topics to check how was developed.</string>
    <string name="wt_page2_title">Android Jetpack</string>
    <string name="wt_page2_description">The project is making use of the newest technology of Android Jetpack Library.</string>
    <string name="wt_page3_title">Reactive</string>
    <string name="wt_page3_description">This is a reactive App thanks to RxJava dependency.</string>

    <string name="main_home_title">Home</string>
    <string name="main_topics_title">Topics</string>
    <string name="main_sett_title">Settings</string>
    <string name="main_terms_title">Terms &amp; Conditions</string>
    <string name="main_author_title">Author</string>

    <string name="home_title">Welcome!</string>
    <string name="home_button">About</string>
    <string name="home_description">Simple App written in Kotlin used to make notes through the commentaries on code to study some topics of Android Development.
        Furthermore the project is used to take practice with the newest Android Jetpack libraries that sometimes I can\'t use at work.
        This project is a new version from AndroidNotes project which uses Java 8 and MVP architecture.</string>

    <string name="about_title">About</string>
    <string name="about_description">Simple App with Kotlin used to make notes through the commentaries on code to study some topics of Android Development.
        Furthermore the project is used to take practice with the newest Android Jetpack libraries that sometimes I can\'t use at work.
        This project is a new version from AndroidNotes project which uses Java 8 and MVP architecture.</string>

    <string name="topics_item_animation_title">Animations</string>
    <string name="topics_item_animation_desc">Show animations on views layouts (ConstraintLayout only) or values
        making use of ValueAnimatorto graduate heights and constraints which is managed with ConstrainSet
        instead LayoutParams</string>
    <string name="topics_item_display_title">Display data</string>
    <string name="topics_item_display_desc">Display a list of users called from ReqRes web page.in API REST.
        The communication is achieved with MVVM architecture using ViewModel and LiveData from Android Jetpack,
        Dagger2 as a dependency injector, Retrofit to fetch the data from de API REST and RxJava to subscribe the responses.</string>
    <string name="topics_item_photos_title">Photos</string>
    <string name="topics_item_photos_desc">List of photos taken by camera or uploaded from gallery to show them inside a slider.
        The topic is about to manage the permissions to access to gallery, camera, location, etc. for Android API 23 and above.
        Furthermore the screen can manage the photos by CRUD function.</string>

    <string name="settings_item_theme">Theme</string>
    <string name="settings_item_walkthrough">Walkthrough</string>
    <string name="settings_item_language">Language</string>
    <string name="settings_item_terms">Terms &amp; Conditions</string>
    <string name="settings_item_author">Author</string>

    <string name="data_name">David Pasache Lavado</string>
    <string name="data_email">david.2289@icloud.com</string>
    <string name="data_phone">+00 666 777 889</string>
    <string name="data_social_network">Social Network</string>
    <string name="data_social_network_linkedin_title">Linkedin</string>
    <string name="data_social_network_linkedin_link">https://linkedin.com/in/david-pasache-8b0928142</string>
    <string name="data_social_network_github_title">Github</string>
    <string name="data_social_network_github_link">https://github.com/David2289</string>

</resources>