<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.andnotes.ui.view.home.fragment.HomeFragment"
        android:label="@string/main_home_title"
        tools:layout="@layout/home_fragment"/>

    <fragment
        android:id="@+id/topics"
        android:name="com.example.andnotes.ui.view.home.fragment.TopicsFragment"
        android:label="@string/main_topics_title"
        tools:layout="@layout/topics_fragment"/>

    <navigation
        android:id="@+id/sett"
        app:startDestination="@id/settings">

        <fragment
            android:id="@+id/settings"
            android:name="com.example.andnotes.ui.view.home.fragment.SettingsFragment"
            android:label="@string/main_sett_title"
            tools:layout="@layout/topics_fragment">

            <action
                android:id="@+id/action_settings_to_author"
                app:destination="@id/author"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"/>

            <action
                android:id="@+id/action_settings_to_terms"
                app:destination="@id/terms"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"/>

        </fragment>

        <fragment
            android:id="@+id/author"
            android:name="com.example.andnotes.ui.view.home.fragment.AuthorFragment"
            android:label="@string/main_author_title"
            tools:layout="@layout/author_fragment"/>

        <fragment
            android:id="@+id/terms"
            android:name="com.example.andnotes.ui.view.home.fragment.TermsFragment"
            android:label="@string/main_terms_title"
            tools:layout="@layout/terms_fragment"/>

    </navigation>

</navigation>