<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.data.DataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/commons_20dp">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="120dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/img_photo"
            android:contentDescription="@null"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/photo"
            android:layout_marginStart="@dimen/commons_20dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Font.Medium.Subtitle.Black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/data_name"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Font.Italic.Body.Black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/commons_10dp"
                android:text="@string/data_email"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/social_network_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Font.Bold.Subtitle.Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/commons_40dp"
            android:text="@string/data_social_network"/>

        <TextView
            android:id="@+id/linkedin_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Font.Medium.Subtitle.Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/social_network_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/commons_15dp"
            android:text="@string/data_social_network_linkedin_title"/>

        <Button
            android:id="@+id/linkedin_link"
            android:layout_width="0dp"
            style="@style/TextButton.Medium.Body.Secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linkedin_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/data_social_network_linkedin_link"/>

        <TextView
            android:id="@+id/github_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Font.Medium.Subtitle.Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linkedin_link"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/commons_10dp"
            android:text="@string/data_social_network_github_title"/>

        <Button
            android:id="@+id/github_link"
            android:layout_width="0dp"
            style="@style/TextButton.Medium.Body.Secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/github_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/data_social_network_github_link"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>