<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.home.fragment.AuthorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/commons_20dp">
        
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/img_photo"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:strokeWidth="@dimen/commons_05dp"
            android:padding="3dp"
            app:strokeColor="@color/fog"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Font.Medium.Subtitle.Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/commons_10dp"
            android:gravity="center"
            android:text="@string/data_name"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Font.Italic.Body.Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/commons_10dp"
            android:gravity="center"
            android:text="@string/data_email"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Font.Italic.Body.Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/commons_05dp"
            android:gravity="center"
            android:text="@string/data_phone"/>

        <TextView
            android:id="@+id/social_network_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Font.Bold.Subtitle.Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/commons_40dp"
            android:text="@string/data_social_network"/>

        <Button
            android:id="@+id/linkedin"
            android:layout_width="0dp"
            style="@style/TextButton.Medium.Body.Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/social_network_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/commons_10dp"
            android:text="@string/data_social_network_linkedin_title"
            app:icon="@drawable/ic_linkedin"
            app:iconTint="@null"
            app:iconSize="@dimen/commons_25dp"/>

        <Button
            android:id="@+id/github"
            android:layout_width="0dp"
            style="@style/TextButton.Medium.Body.Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linkedin"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/data_social_network_github_title"
            app:icon="@drawable/ic_github"
            app:iconTint="@null"
            app:iconSize="@dimen/commons_25dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>